--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             class="img-fluid img-slide-right rounded shadow-lg">
                     </div>
                     <div class="col-12 col-lg-7 p-4">
-                        <h3 class="display-4">Wellington & Hutt Valley</h3>
+                        <h3 class="display-4">Wellington Region</h3>
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet consectetur
                             adipiscing elit
                             quisque faucibus ex sapien. Quisque faucibus ex sapien vitae pellentesque sem placerat.
