--- a/index.html
+++ b/index.html
@@ -36,12 +36,24 @@
 
                     <!-- Navigation Links -->
                     <ul class="navbar-nav d-flex flex-column flex-lg-row text-center">
-                        <li class="nav-item my-1 mx-1 my-lg-0"><a href="#" class="nav-link active"
-                                aria-current="page">Home</a></li>
-                        <li class="nav-item my-1 mx-1 my-lg-0"><a href="/about.html" class="nav-link">About Us</a></li>
-                        <li class="nav-item my-1 mx-1 my-lg-0"><a href="/services.html" class="nav-link">Services</a>
+                        <li class="nav-item my-1 mx-1 my-lg-0 active">
+                            <a href="#" class="nav-link" aria-current="page">Home</a>
                         </li>
-                        <li class="nav-item my-1 mx-1 my-lg-0"><a href="/contact.html" class="nav-link">Contact Us</a>
+                        <li class="nav-item my-1 mx-1 my-lg-0">
+                            <a href="/about.html" class="nav-link">About Us</a>
+                        </li>
+                        <li class="nav-item my-1 mx-1 my-lg-0 dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                            <div class="dropdown-menu">
+                                <a href="#" class="dropdown-item">Roof Treatments</a>
+                                <a href="#" class="dropdown-item">House Washing</a>
+                                <a href="#" class="dropdown-item">Gutter Cleaning</a>
+                                <a href="#" class="dropdown-item">Deck & Driveway Cleaning</a>
+                                <a href="#" class="dropdown-item">Window Cleaning</a>
+                            </div>
+                        </li>
+                        <li class="nav-item my-1 mx-1 my-lg-0">
+                            <a href="/contact.html" class="nav-link">Contact Us</a>
                         </li>
                     </ul>
                 </div>
