--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                         <li class="nav-item my-1 mx-1 my-lg-0">
                             <a href="/about.html" class="nav-link">About Us</a>
                         </li>
+
+                        <!-- Services Dropdown -->
                         <li class="nav-item my-1 mx-1 my-lg-0 dropdown">
                             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                             <div class="dropdown-menu">
