--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script defer src="/resources/js/accessibility.js"></script>
     <script defer src="/resources/js/scrollAnimation.js"></script>
+    <base href="/Roof-Wash-Specialists/">
 </head>
 
 <body>
