--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roof Wash Specialists</title>
+    <base href="https://bogwandio.github.io/Roof-Wash-Specialists/">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -15,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script defer src="/resources/js/accessibility.js"></script>
     <script defer src="/resources/js/scrollAnimation.js"></script>
-    <base href="/Roof-Wash-Specialists/">
+    
 </head>
 
 <body>
