--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roof Wash Specialists</title>
-    <base href="https://bogwandio.github.io/Roof-Wash-Specialists/">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href="/resources/css/styles.css" rel="stylesheet">
+    <link href="resources/css/styles.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <script defer src="/resources/js/accessibility.js"></script>
-    <script defer src="/resources/js/scrollAnimation.js"></script>
+    <script defer src="resources/js/accessibility.js"></script>
+    <script defer src="resources/js/scrollAnimation.js"></script>
     
 </head>
 
@@ -27,7 +26,7 @@
                 <a class="navbar-brand" href="#">Roof Wash Specialists</a>
 
                 <div class="ms-auto me-2 d-none d-md-block">
-                    <a href="/pages/contact.html" class="btn btn-sm d-flex align-items-center"><span
+                    <a href="pages/contact.html" class="btn btn-sm d-flex align-items-center"><span
                             class="material-symbols-outlined me-1">
                             home_work
                         </span>Request a Quote</a>
@@ -52,38 +51,38 @@
                                     </span>Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center" href="/pages/about-us.html"><span
+                                <a class="nav-link d-flex align-items-center" href="pages/about-us.html"><span
                                         class="material-symbols-outlined mx-2">
                                         supervisor_account
                                     </span>About Us</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="/pages/services.html" role="button"
+                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="pages/services.html" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false"><span
                                         class="material-symbols-outlined mx-2">
                                         handyman
                                     </span>Services</a>
                                 <ul class="dropdown-menu rounded-0">
-                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="/pages/roof-treatment.html"><span
+                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="pages/roof-treatment.html"><span
                                                 class="material-symbols-outlined mx-2">
                                                 roofing
                                             </span>Roof Treatment</a>
                                     </li>
-                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="/pages/house-wash.html"><span
+                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="pages/house-wash.html"><span
                                                 class="material-symbols-outlined mx-2">
                                                 water_damage
                                             </span>House Wash</a></li>
-                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="/pages/gutter-cleaning.html"><span
+                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="pages/gutter-cleaning.html"><span
                                                 class="material-symbols-outlined mx-2">
                                                 tools_ladder
                                             </span>Gutter Cleaning</a>
                                     </li>
-                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="/pages/deck-and-driveway-cleaning.html"><span
+                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="pages/deck-and-driveway-cleaning.html"><span
                                                 class="material-symbols-outlined mx-2">
                                                 deck
                                             </span>Deck & Driveway
                                             Cleaning</a></li>
-                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="/pages/window-cleaning.html"><span
+                                    <li><a class="dropdown-item d-flex align-items-center p-2 ps-4" href="pages/window-cleaning.html"><span
                                                 class="material-symbols-outlined mx-2">
                                                 window
                                             </span>Window Cleaning</a>
@@ -91,7 +90,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center" href="/pages/contact.html"><span
+                                <a class="nav-link d-flex align-items-center" href="pages/contact.html"><span
                                         class="material-symbols-outlined mx-2">
                                         contact_page
                                     </span>Contact</a>
@@ -116,12 +115,12 @@
                         cleaning for homes and businesses across the Wellington Region.</p>
 
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-lg-start">
-                        <a href="/pages/services.html"
+                        <a href="pages/services.html"
                             class="btn fw-bold btn-lg mx-4 mx-lg-0 d-flex align-items-center hero-btn"><span
                                 class="material-symbols-outlined me-2">
                                 handyman
                             </span>Our Services</a>
-                        <a href="/pages/contact.html"
+                        <a href="pages/contact.html"
                             class="btn fw-bold btn-lg mx-4 mx-lg-0 d-flex align-items-center hero-btn"><span
                                 class="material-symbols-outlined me-2">
                                 home_work
@@ -160,13 +159,13 @@
                     </div>
                     <div class="d-none d-lg-flex col-12 col-lg-7 col-xl-5">
                         <img class="img-fluid rounded-3 shadow-lg"
-                            src="/resources/images/1024x682-webp/05 - Ryans Waterblasting Photos_1024.webp">
+                            src="resources/images/1024x682-webp/05 - Ryans Waterblasting Photos_1024.webp">
                     </div>
                 </div>
                 <div class="animate-on-scroll slide-in-right row py-lg-4 d-flex align-items-center g-5 g-lg-2">
                     <div class="d-none d-lg-flex col-12 col-lg-7 col-xl-5">
                         <img class="img-fluid rounded-3 shadow-lg"
-                            src="/resources/images/1024x682-webp/06 - Ryans Waterblasting Photos_1024.webp">
+                            src="resources/images/1024x682-webp/06 - Ryans Waterblasting Photos_1024.webp">
                     </div>
                     <div class="col-12 col-lg-5 col-xl-7 p-4 p-lg-4">
                         <div class="d-flex flex-nowrap align-items-center pt-3 pt-lg-0">
