--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
                     </div>
                     <div class="d-none d-lg-flex col-12 col-lg-7 col-xl-5">
                         <img class="img-fluid rounded-3 shadow-lg"
-                            src="resources/images/1024x682-webp/05 - Ryans Waterblasting Photos_1024.webp">
+                            src="./resources/images/1024x682-webp/05 - Ryans Waterblasting Photos_1024.webp">
                     </div>
                 </div>
                 <div class="animate-on-scroll slide-in-right row py-lg-4 d-flex align-items-center g-5 g-lg-2">
                     <div class="d-none d-lg-flex col-12 col-lg-7 col-xl-5">
                         <img class="img-fluid rounded-3 shadow-lg"
-                            src="resources/images/1024x682-webp/06 - Ryans Waterblasting Photos_1024.webp">
+                            src="./resources/images/1024x682-webp/06 - Ryans Waterblasting Photos_1024.webp">
                     </div>
                     <div class="col-12 col-lg-5 col-xl-7 p-4 p-lg-4">
                         <div class="d-flex flex-nowrap align-items-center pt-3 pt-lg-0">
