--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roof Wash Specialists</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="resources/css/styles.css" rel="stylesheet">
@@ -14,20 +13,17 @@
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script defer src="resources/js/accessibility.js"></script>
-    <script defer src="resources/js/scrollAnimation.js"></script>
-    <script defer src="resources/js/slider.js"></script>
-
+    <script defer src="resources/js/staggerAnimation.js"></script>
 </head>
 
 <body>
-
     <header>
         <nav class="navbar fixed-top">
             <div class="container-fluid d-flex justify-content-end align-items-center gap-2 pe-3">
 
                 <div class="d-none d-md-block">
-                    <a href="pages/contact.html" class="btn btn-md d-flex align-items-center"><span
-                            class="material-symbols-outlined me-1">
+                    <a href="pages/contact.html" class="btn btn-md d-flex align-items-center req-btn"><span
+                            class="material-symbols-outlined me-1 fs-4">
                             home_work
                         </span>Request a Quote</a>
                 </div>
@@ -106,232 +102,48 @@
         </nav>
     </header>
 
-    <main>
-
+    <main class="pb-4">
         <section class="hero d-flex align-items-center">
             <div class="overlay"></div>
-            <div class="hero-content px-4 py-5 my-5 text-center text-lg-start">
-                <span class="h5">Roof Wash Specialists</span>
-
-                <div class="col-12 col-lg-8">
-                    <h1 class="display-5 fw-bold">Complete Exterior Cleaning. Remarkable Results.</h1>
-                    <p class="lead mb-4">From roofs to driveways, windows to walls — we deliver expert exterior
-                        cleaning for homes and businesses across the Wellington Region.</p>
-
-                    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-lg-start">
-                        <a href="pages/services.html"
-                            class="btn fw-bold btn-lg mx-4 mx-lg-0 d-flex align-items-center hero-btn"><span
-                                class="material-symbols-outlined me-2">
-                                handyman
-                            </span>Our Services</a>
-                        <a href="pages/contact.html"
-                            class="btn fw-bold btn-lg mx-4 mx-lg-0 d-flex align-items-center hero-btn"><span
-                                class="material-symbols-outlined me-2">
-                                home_work
-                            </span>Request a Quote</a>
-                    </div>
-                </div>
-            </div>
-            <a href="#about-us" class="scroll-indicator text-decoration-none d-flex flex-column align-items-center">
-                <small>More Information</small>
-                <span class="material-symbols-outlined fs-1 fw-bold">keyboard_arrow_down</span>
-            </a>
-        </section>
-
-        <div id="about-us" class="w-100 waves-top"></div>
-
-        <section class="bg-primary">
-            <div class="container p-4">
-                <div class="animate-on-scroll slide-in-left row py-lg-4 d-flex align-items-center ">
-                    <div class="col-12 col-lg-6 col-xl-7">
-                        <div class="d-flex flex-nowrap align-items-center">
-                            <h2 class="display-5">About Us</h2>
-                            <span class="material-symbols-outlined fs-1 ms-2">
-                                supervisor_account
-                            </span>
-                        </div>
-                        <h3>Locally Owned, Quality-Driven.</h3>
-                        <p>At Roof Wash Specialists, we take pride in delivering professional, high-quality exterior
-                            cleaning services that make your home or business shine.</p>
-                        <p>From roofs and gutters to
-                            driveways, decks, and windows — we use safe, effective techniques to
-                            achieve lasting results you can see.</p>
-                        <p>Proudly locally owned, we’re committed to raising
-                            the standard of exterior care across the Wellington Region, one property at a time.</p>
-                    </div>
-                    <div class="d-none d-lg-flex col-12 col-lg-6 col-xl-5">
-                        <img class="img-fluid rounded-3 shadow"
-                            src="./resources/images/1024x682-webp/05 - Ryans Waterblasting Photos_1024.webp">
-                    </div>
-                </div>
-                <div class="animate-on-scroll slide-in-right row py-lg-4 d-flex align-items-center">
-                    <div class="d-none d-lg-flex col-12 col-lg-6 col-xl-5">
-                        <img class="img-fluid rounded-3 shadow"
-                            src="./resources/images/1024x682-webp/06 - Ryans Waterblasting Photos_1024.webp">
-                    </div>
-                    <div class="col-12 col-lg-6 col-xl-7">
-                        <div class="d-flex flex-nowrap align-items-center pt-4 pt-lg-0">
-                            <h2 class="display-5">Our Approach</h2>
-                            <span class="material-symbols-outlined fs-1 ms-2">
-                                waving_hand
-                            </span>
-                        </div>
-                        <h3>Quality & Care</h3>
-                        <p>Quality isn’t just about clean surfaces — it’s about the care we
-                            bring to every job. From our first conversation to the final rinse, we take the time to
-                            understand your property’s needs and deliver results that exceed expectations.</p>
-                        <p>We combine
-                            reliable service, clear communication, and attention to detail to ensure every home or
-                            business we treat gets the respect it deserves. It’s this commitment to doing things right
-                            that sets us apart — and why so many property owners in the Wellington Region choose us time
-                            and time
-                            again.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <div class="w-100 waves-bottom"></div>
-
-        <section class="bg-base">
-            <div class="container p-4 p-lg-0">
-                <div class="row py-4 d-flex align-items-center">
-                    <div class="col-12 col-lg-6">
-
-                        <div class="slide-in-up animate-on-scroll d-flex align-items-center">
-                            <h2 class="display-5">Why Choose Us?</h2>
-                            <span class="material-symbols-outlined fs-1 ms-2">
-                                cheer
-                            </span>
-                        </div>
-
-                        <div class="slide-in-up animate-on-scroll">
-                            <h3>Our Values</h3>
-                            <p>At the heart of our exterior cleaning services are four core values — affordability,
-                                quality,
-                                professionalism, and proven results. We’re committed to delivering reliable service at
-                                fair
-                                prices, using trusted methods and equipment to bring out the best in every property we
-                                clean. When you choose us, you choose a team that takes pride in doing the job right.
-                            </p>
-                        </div>
-
-                        <div class="slide-in-up animate-on-scroll">
-                            <h3>Our Guarantee</h3>
-                            <p>We stand behind every job we do. If you’re not completely satisfied, we’ll make it right
-                                — no excuses, no hidden fees. Our guarantee is simple: honest service, professional
-                                results, and your peace of mind. When you choose us, you’re choosing a team that’s
-                                committed to quality from start to finish.
-                            </p>
-                        </div>
-
-                        <div class="slide-in-up animate-on-scroll">
-                            <h3>Satisfied Customers</h3>
-                            <p>Our work speaks for itself — and so do the people we serve. From homeowners to business
-                                owners, we’ve built lasting relationships based on trust, quality, and consistent
-                                results. See why so many across the Wellington Region choose us for their exterior
-                                cleaning needs. Their satisfaction is our success.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-lg-6">
-                        <div class="row py-4 g-4 text-center">
-                            <div class="col-12 col-lg-6">
-                                <div class="slide-in-up animate-on-scroll card shadow-lg h-100 p-3 bg-primary">
-                                    <span class="material-symbols-outlined pt-1 fs-1">savings</span>
-                                    <span class="display-6">Affordable</span>
-                                    <p class="lead mb-0 pt-3">We believe in fair pricing with no surprises — offering
-                                        high-quality exterior cleaning that fits your budget without compromising
-                                        results.</p>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-6">
-                                <div class="slide-in-up animate-on-scroll card shadow-lg h-100 p-3 bg-primary">
-                                    <span class="material-symbols-outlined pt-1 fs-1">thumb_up</span>
-                                    <span class="display-6">Quality</span>
-                                    <p class="lead mb-0 pt-3">From the products we use to the care we take, quality is
-                                        at the core of every service we provide — ensuring a lasting clean every time.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-6">
-                                <div class="slide-in-up animate-on-scroll card shadow-lg h-100 p-3 bg-primary">
-                                    <span class="material-symbols-outlined pt-1 fs-1">engineering</span>
-                                    <span class="display-6">Professional</span>
-                                    <p class="lead mb-0 pt-3">Our team is punctual, courteous, and fully trained,
-                                        delivering a seamless experience with attention to detail and respect for your
-                                        property.</p>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-6">
-                                <div class="slide-in-up animate-on-scroll card shadow-lg h-100 p-3 bg-primary">
-                                    <span class="material-symbols-outlined pt-1 fs-1">sentiment_very_satisfied</span>
-                                    <span class="display-6">Results</span>
-                                    <p class="lead mb-0 pt-3">We go beyond surface cleaning — our work restores the look
-                                        and feel of your home or business, leaving it fresh, bright, and like new.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="bg-base py-4">
             <div class="container">
-                <div class="row align-items-start">
-                    <div class="col-12 col-lg-6">
-                        <div class="b-a-container position-relative d-grid overflow-hidden rounded-3">
-                            <div class="image-container mw-100">
-                                <img class="image-before img-fluid h-100 d-block position-absolute"
-                                    src="./resources/images/1024x682-webp/09 - Ryans Waterblasting Photos_1024.webp"
-                                    alt="Before Image">
-                                <img class="image-after img-fluid w-100 h-100 d-block"
-                                    src="./resources/images/1024x682-webp/10 - Ryans Waterblasting Photos_1024.webp"
-                                    alt="After Image">
-                            </div>
-                            <input type="range" min="0" max="100" value="50" class="b-a-slider position-absolute opacity-0"
-                                aria-label="Percentage of before photo shown">
-                            <div class="b-a-slider-line position-absolute"></div>
-                            <div class="b-a-slider-button position-absolute bg-primary p-2 d-grid shadow-sm" aria-hidden="true"><span class="material-symbols-outlined">
-                                    arrow_range
-                                </span></div>
-                        </div>
+                <div class="row flex-column align-items-center">
+                    <div class="col-12 col-md-8 col-lg-4 text-center">
+                        <img src="./resources/images/logo.png" class="img-fluid mx-auto d-block animate-up-stagger" alt="Logo">
                     </div>
+                    <div class="col-12 col-md-10 col-lg-8 text-center">
+                        <h1 class="display-5 fw-bold animate-up-stagger">Complete Exterior Cleaning.<br>Remarkable Results.</h1>
+                        <p class="lead mb-4 animate-up-stagger">From roofs to driveways, windows to walls — we deliver expert exterior
+                            cleaning for homes and businesses across the Wellington Region.</p>
 
-                    <div class="col-12 col-lg-6">
-
-                        <div class="slide-in-up animate-on-scroll d-flex align-items-center">
-                            <h2 class="display-5">Proven Results</h2>
-                            <span class="material-symbols-outlined fs-1 ms-2">
-                                cleaning_bucket
-                            </span>
+                        <div class="d-grid gap-3 d-sm-flex justify-content-center animate-up-stagger">
+                            <a href="pages/services.html"
+                                class="btn fw-bold btn-lg d-flex align-items-center hero-btn"><span
+                                    class="material-symbols-outlined me-2 fs-3">
+                                    handyman
+                                </span>Our Services</a>
+                            <a href="pages/contact.html"
+                                class="btn fw-bold btn-lg d-flex align-items-center hero-btn"><span
+                                    class="material-symbols-outlined me-2 fs-3">
+                                    home_work
+                                </span>Request a Quote</a>
                         </div>
-                        <div class="slide-in-up animate-on-scroll">
-                            <h3>Our Results</h3>
-                            <p>We don’t just clean — we transform. Our work speaks for itself, bringing life back to
-                                tired exteriors and creating spaces that shine. From stubborn roof stains to
-                                weather-worn decks, we deliver noticeable results that boost curb appeal and protect
-                                your investment. See the before-and-after difference our team consistently delivers.
-                            </p>
-                        </div>
-
-
-
                     </div>
                 </div>
             </div>
         </section>
-
-        <div class="w-100 waves-top"></div>
-
-
-
     </main>
 
-    <footer>
+    <footer class="fixed-bottom col-primary p-4 mt-5">
+        <div class="d-flex flex-column flex-md-row text-center justify-content-center gap-2 animate-up-stagger">
+            <div><a href="/pages/about-us.html" class="footer-link mx-2">About Us</a></div>
+            <div><a href="/pages/terms-and-conditions" class="footer-link mx-2">Terms & Conditions</a></div>
+            <div><a href="/privacy-policy" class="footer-link mx-2">Privacy Policy</a></div>
+        </div>
 
+        <div class="opacity-50 hr my-3 w-75 mx-auto animate-up-stagger"></div>
+
+        <div class="col-auto text-center small mb-4 animate-up-stagger">
+            &copy; 2025 Roof Wash Specialists. All Rights Reserved.
+        </div>
     </footer>
-
 </body>
